# futures-signals-ext

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: entry.rs  ext.rs  flatten.rs  futures_signals_ext.rs  futures_signals_spawn.rs  lib.rs  option.rs  spawn.rs
