[package]
name = "futures-signals-ext"
version = "0.3.1"
authors = ["martin.kolarik@smartcontrol.cz"]
description = "Extension to futures-signals: MutableOption with combinators, spawning, predicate driven selections from SignalVec."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/futures-signals-ext"
homepage = "https://github.com/martin-kolarik/futures-signals-ext"

[features]
default = ["option", "spawn-local"]
option = []
spawn = []
spawn-local = []

[dependencies]
artwrap = { version = "^0.1" }
futures-signals = { version = "^0.3", default-features = false }
pin-project-lite = { version = "^0.2" }
